--- a/f2h2h1.github.io/在Windows下配置PHP服务器.html
+++ b/f2h2h1.github.io/在Windows下配置PHP服务器.html
@@ -347,7 +347,8 @@ mod_rewrite
 <h3>下载 Apache</h3>
 <pre><code class="lang-plaintext">https://www.apachelounge.com/download/
 </code></pre>
-<p>Apache 官方只提供源码，二进制文件都是第三方编译的，这里选择 Apache Lounge 提供的二进制文件</p>
+<p>Apache 官方只提供源码，二进制文件都是第三方编译的，这里选择 Apache Lounge 提供的二进制文件。
+除了 Apache Lounge 之外还有 WampServer 和 XAMPP ，选 Apache Lounge 的原因是， php 的下载页面也是推荐用 Apache Lounge 。</p>
 <h3>配置 Apache</h3>
 <ol>
 <li>把 Apache 添加进环境变量</li>
