--- a/f2h2h1.github.io/开发Magento2的模块.html
+++ b/f2h2h1.github.io/开发Magento2的模块.html
@@ -2319,6 +2319,9 @@ vendor\magento\module-logging\Model\Processor.php:363
 $scopeConfig = \Magento\Framework\App\ObjectManager::getInstance()-&gt;get(Magento\Framework\App\Config\ScopeConfigInterface::class);
 $scopeConfig-&gt;getValue('general/file/bunch_size');
 </code></pre>
+<p>用于查询配置的sql</p>
+<pre><code class="lang-sql">select * from core_config_data where path like '%general/file/bunch_size%' limit 10
+</code></pre>
 &lt;!--
 php -a &lt;&lt;- 'EOF'
 try {
@@ -2371,8 +2374,23 @@ php bin/magento config:show path
 </code></pre>
 <p>参考
 <a href="https://experienceleague.adobe.com/docs/commerce-operations/configuration-guide/files/config-reference-systemxml.html">https://experienceleague.adobe.com/docs/commerce-operations/configuration-guide/files/config-reference-systemxml.html</a></p>
-&lt;!-- select * from core_config_data where path like '%promo/promotion_group/email_address%' limit 10 --&gt;
-
+<h3>配置里的加密字段</h3>
+<p>加密字段，就是在后台页面里不会直接显示内容，而是显示 <code>*****</code> ，即使用命令行获取字段内容也是返回 <code>*****</code></p>
+<p>etc/system.xml 里的配置，注意 type 需要设成 obscure</p>
+<pre><code class="lang-xml">&lt;field id="password" translate="label" type="obscure" sortOrder="25"  showInDefault="1" showInWebsite="1" showInStore="1"&gt;
+    &lt;label&gt;Password&lt;/label&gt;　　　　　　　　　　　　　　　　　　
+        &lt;backend_model&gt;Magento\Config\Model\Config\Backend\Encrypte&lt;/backend_model&gt;
+    &lt;validate&gt;required-entry&lt;/validate&gt;
+&lt;/field&gt;
+</code></pre>
+<p>在代码里这样获取</p>
+<pre><code class="lang-php">$scopeConfig = $objectManager-&gt;get(\Magento\Framework\App\Config\ScopeConfigInterface::class);
+$secret = $scopeConfig-&gt;getValue('sales_email/general/teste_ncrypted_2'); // 这是加密后的字符串
+var_dump($secret);
+$encryptor = $objectManager-&gt;get(\Magento\Framework\Encryption\Encryptor::class); // 这才是有效的内容
+$secret = $encryptor-&gt;decrypt($secret);
+var_dump($secret);
+</code></pre>
 &lt;!--
 
 block -&gt; ui_component -&gt; system.xml
