--- a/kexizeroing.github.io/JavaScript basics you should know.html
+++ b/kexizeroing.github.io/JavaScript basics you should know.html
@@ -1229,6 +1229,10 @@ function safeAwait(promise) {
 
 // const [ err, data ] = await safeAwait(myPromise())
 </code></pre>
+<blockquote><p>Top level await (introduced in ES2022):<br/>
+You can use the <code>await</code> keyword on its own (outside of an async function) at the top level of a module.</p>
+<p>It only works in JavaScript modules, not in CommonJS (<code>require</code>) or traditional <code>&lt;script&gt;</code> tags without <code>type="module"</code>. Also, <code>.cjs</code> files in Node.js don’t support top-level await.</p>
+</blockquote>
 <p>Now you should understand why the below code will throw an error. The <code>useEffect</code> hook isn't expecting us to return a promise. It expects us to return either nothing or a cleanup function. A quick fix is to create a separate async function within our effect.</p>
 <pre><code class="lang-js">React.useEffect(async () =&gt; {
   const url = `${API}/get-profile?id=${userId}`
