--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -157,6 +157,13 @@
 <li><p>The <code>sideEffects</code> property of <code>package.json</code> declares whether a module has side effects on import. When side effects are present, unused modules and unused exports may not be tree shaken due to the limitations of static analysis.</p>
 </li>
 </ol>
+<h4>打包工具构建时静态分析</h4>
+<pre><code>Critical dependency: the require function is used in a way in which dependencies cannot be statically extracted.
+</code></pre>
+<p>这样的 warning，是因为 <code>require(...)</code> 是运行时动态行为，它无法静态知道你到底引用了哪个模块，因此构建出的 bundle 不完整或存在不确定性。Webpack 支持懒加载语法 <code>(resolve) =&gt; require(['...'], resolve);</code>，表示“这段代码用到的模块是异步加载的，请打包成一个 chunk。” 这种语法是 Webpack 的特定实现，并非 ES 的官方标准，构建工具无法完全静态分析，在迁移到 Rspack 或Vite 时容易报错。</p>
+<blockquote><p><code>resolve =&gt; require(['...'], resolve)</code> 其实是 Webpack 兼容 AMD 风格的写法，webpack 看到这是个 <code>require([], callback)</code> 就知道你想异步加载模块。</p>
+</blockquote>
+<p><code>import()</code> 是来做“动态模块加载”的语法，构建工具能很好地支持它，每个 <code>import('./xxx')</code> 的路径生成一份 chunk 文件，并在需要时异步加载。</p>
 <h4>webpack-bundle-analyzer（检查打包体积）</h4>
 <p>It will create an interactive treemap visualization of the contents of all your bundles when you build the application. There are two ways to configure webpack bundle analyzer in a webpack project. Either as a plugin or using the command-line interface.</p>
 <pre><code class="lang-js">// Configure the webpack bundle analyzer plugin
