--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 54 个博客、9067 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 54 个博客、9071 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=jerkwin.github.io/%E7%94%9F%E7%89%A9%E5%AD%A6%E5%A4%96%E6%96%87%E6%95%99%E5%8F%82%E8%AF%84%E4%BB%8B.html>2025-06-25 生物学外文教参评介</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202525%202025%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%B5%9B%E8%AE%B0%20%E4%B8%8B.html>2025-06-23 折返点 2525 2025 隧道马赛记 下</a></li>
 
 <li><a href=informal.top/LLM%20fine-tune%20experience.html>2025-06-23 LLM fine-tune experience</a></li>
 
@@ -37,6 +41,8 @@
 
 <li><a href=www.cnfeat.com/%E4%B8%AA%E4%BA%BA%E5%A5%BD%E7%89%A9%E6%8E%A8%E8%8D%90%EF%BC%882025%E5%B9%B46%E6%9C%88%E6%9B%B4%E6%96%B0%EF%BC%89.html>2025-06-12 个人好物推荐（2025年6月更新）</a></li>
 
+<li><a href=jerkwin.github.io/%E9%9B%B6%E6%88%AA%E8%B7%9D%E7%BA%BF%E6%80%A7%E6%A8%A1%E5%9E%8B%E7%9A%84%E6%8B%9F%E5%90%88.html>2025-06-12 零截距线性模型的拟合</a></li>
+
 <li><a href=blog.forecho.com/%E4%BD%BF%E7%94%A8%20Topstep%20%E4%BA%A4%E6%98%93%E6%9C%9F%E8%B4%A7.html>2025-06-11 使用 Topstep 交易期货</a></li>
 
 <li><a href=www.cnfeat.com/%E5%A6%82%E4%BD%95%E5%88%A4%E6%96%AD%E4%BD%A0%E7%9C%9F%E6%AD%A3%E6%8B%A5%E6%9C%89%E4%BA%86%E4%B8%AA%E4%BA%BA%E7%94%9F%E4%BA%A7%E5%8A%9B%EF%BC%9F.html>2025-06-10 如何判断你真正拥有了个人生产力？</a></li>
@@ -52,6 +58,8 @@
 <li><a href=babyno.top/%E8%AE%A9AI%E5%B8%AE%E4%BD%A0%E7%AE%A1%E7%90%86%E5%85%AC%E4%BC%97%E5%8F%B7%E7%9A%84%E6%8E%92%E7%89%88%E5%92%8C%E5%8F%91%E5%B8%83.html>2025-06-05 让AI帮你管理公众号的排版和发布</a></li>
 
 <li><a href=babyno.top/%E4%BB%8EMarkdown%E5%88%B0%E5%85%AC%E4%BC%97%E5%8F%B7%EF%BC%8C%E8%87%AA%E5%8A%A8%E5%8F%91%E5%B8%83%E6%96%B0%E4%BD%93%E9%AA%8C%20%E2%80%94%20%E6%96%87%E9%A2%9C%20MCP%20Server.html>2025-06-04 从Markdown到公众号，自动发布新体验 — 文颜 MCP Server</a></li>
+
+<li><a href=jerkwin.github.io/%E5%88%86%E6%AE%B5%E8%BD%A8%E8%BF%B9MSD%E6%B3%95%E8%AE%A1%E7%AE%97%E4%B8%8D%E5%90%8C%E5%8C%BA%E5%9F%9F%E7%9A%84%E6%89%A9%E6%95%A3%E7%B3%BB%E6%95%B0.html>2025-06-03 分段轨迹MSD法计算不同区域的扩散系数</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202522%20%E8%AE%AD%E7%BB%83%E7%AC%AC%2017%20%E5%91%A8%EF%BC%8C%E5%87%8F%E9%87%8F%E5%91%A8%E5%9B%9E%E9%A1%BE%E4%B8%80%E4%B8%8B%E6%9C%AC%E8%AE%AD%E7%BB%83%E5%91%A8%E6%9C%9F.html>2025-06-02 折返点 2522 训练第 17 周，减量周回顾一下本训练周期</a></li>
 
