因无法开源gitee库, 原型链接改为github

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     这里已聚合 54 个博客、9071 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
-    <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
+    <a href="https://github.com/nobodxbodon/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
